--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -16,7 +16,15 @@ body {
 h1{
     font-size: 24px;
     font-weight: normal;
-    padding: 6.0em 0 1.0em;
+    padding: 1em 0 0.5em;
+    text-align: center;
+}
+
+h3{
+    font-size: 1rem;
+    letter-spacing: 0.3rem;
+    opacity: 0.6;
+    padding: 0 0 1em;
     text-align: center;
 }
 
@@ -24,7 +32,41 @@ p {
     text-align: center;
 }
 
+.image-container {
+    display: flex;
+    justify-content: center;
+    gap: 25px; /* Adds space between images */
+}
 
+.image-container img {
+    width: 200px; /* Adjust size as needed */
+    height: auto;
+    border-radius: 8px; /* Optional: rounded corners */
+}
+
+.artist-container, p {
+    display: flex;
+    align-items: center;  /* Vertically centers the content */
+    gap: 20px;            /* Adds space between image and text */
+    justify-content: flex-start; /* Aligns the items to the left */
+    margin-top: 20px;      /* Adjusts the space above the container */
+    text-align: right;
+    text-wrap: balance;
+    margin-right: 30px;
+}
+
+.artist-image {
+    width: 150px;         /* Adjust the width as needed */
+    height: auto;
+    border-radius: 5px;   /* Optional: makes the image circular */
+    display: block;
+}
+
+.artist-info {
+    max-width: 600px;      /* Limits the text width */
+}
+
+/* Bottom Nav */
 .et-hero-tabs,
 .et-slide {
     display: flex;
@@ -51,7 +93,7 @@ p {
 .et-hero-tabs-container {
     display: flex;
     flex-direction: row;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 70px;
@@ -65,6 +107,7 @@ p {
 }
 
 .et-hero-tab {
+    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,21 +116,13 @@ p {
     letter-spacing: 0.1rem;
 		transition: all 0.5s ease;
 		font-size: 0.8rem;
-	  &:hover {
+	    &:hover {
 			color:white;
-      background: rgba(102,177,241,0.8);
+        background: rgba(70, 70, 70, 0.8);
 			transition: all 0.5s ease;
     }
 }
 
-.et-hero-tab-slider {
-    position: absolute;
-    bottom: 0;
-    width: 0;
-    height: 6px;
-    background: #66B1F1;
-    transition: left 0.3s ease;
-}
 
 /* Navigation */
 .material-symbols-outlined {
@@ -199,32 +234,3 @@ main {
 }
 
 /* Media queries */
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-    .sidenav a {
-        font-size: 18px;
-    }
-}
-/* Responsive */
-@media (max-width: 800px) {
-    .et-hero-tab {
-        font-size: 0.8rem;
-    }
-}
-@media (min-width: 800px) {
-    .et-hero-tabs,
-    .et-slide {
-        h1 {
-            font-size: 3rem;
-        }
-        h3 {
-            font-size: 1rem;
-        }
-    }
-    .et-hero-tab {
-        font-size: 1rem;
-    }
-}
