--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -1,6 +1,7 @@
 /* apply a natural box layout model to all elements */
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *, *:before, *:after {
@@ -44,7 +45,7 @@ p {
     border-radius: 8px; /* Optional: rounded corners */
 }
 
-.artist-container, p {
+.artist-container, p{
     display: flex;
     align-items: center;  /* Vertically centers the content */
     gap: 20px;            /* Adds space between image and text */
@@ -56,7 +57,7 @@ p {
 }
 
 .artist-image {
-    width: 150px;         /* Adjust the width as needed */
+    width: 250px;         /* Adjust the width as needed */
     height: auto;
     border-radius: 5px;   /* Optional: makes the image circular */
     display: block;
@@ -123,108 +124,10 @@ p {
     }
 }
 
-
-/* Navigation */
-.material-symbols-outlined {
-    font-variation-settings:
-        'FILL' 0,
-        'wght' 500,
-        'GRAD' 0,
-        'opsz' 48
-}
-
-.openbtn {
-    position: absolute;
-    left: 20px;
-    top: 10px;
-    color: rgb(255, 255, 255);
-    font-family: 'PT Sans', sans-serif;
-}
-
-.openbtn:hover {
-    color: rgb(237, 237, 237);
-    cursor: pointer;
-}
-
-.menu-button {
-    font-size: 36px !important;
-    position: relative;
-    top: 6px;
-    left: -4px;
-}
-
-.menu-text {
-    font-size: 12px;
-    display: block;
-}
-
 ul, li {
     margin: 0;
     padding: 0;
     list-style-type: none;
-}
-
-/* The side navigation menu */
-.all-over-bkg {
-    display: none;
-}
-
-.is-visible {
-    background-color: rgba(0, 0, 0, 0.4);
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-    z-index: 9999;
-    display: block;
-}
-
-.sidenav {
-    height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Stay on top */
-    top: 0;
-    /* Stay at the top */
-    left: 0;
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the sidenav */
-    background-color: white;
-}
-
-/* The navigation menu links */
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-    color: grey;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
